Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	new file:   migrations/Version20240107215930.php
	modified:   public/css/game.css
	modified:   public/css/home.css
	modified:   public/css/style.css
	modified:   public/js/GameSearchBar.js
	deleted:    public/js/apiGames.js
	deleted:    public/js/favorite.js
	modified:   public/js/home.js
	new file:   public/js/responsive.js
	modified:   public/js/searchBars.js
	modified:   public/js/teamSearchBar.js
	modified:   src/Controller/ApiController.php
	modified:   src/Controller/GameController.php
	modified:   src/Controller/TournamentController.php
	modified:   src/Entity/Game.php
	modified:   src/Form/TournamentType.php
	modified:   templates/base.html.twig
	modified:   templates/game/index.html.twig
	modified:   templates/home/index.html.twig
	modified:   templates/tournament/tournamentDetails.html.twig

--- a/public/css/game.css
+++ b/public/css/game.css
@@ -108,3 +108,24 @@
     gap: 20px;
     padding: 0;
 }
+
+
+
+/*****************************************************************GAMES LIST **********************************************************************************************/
+#gameList {
+    padding: 2em;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+#gameList figure{
+    width: calc(24% - 10px);
+    /* width: 24%; */
+    margin: 0;
+}
+
+#gameList img{
+    width: 100%;
+}
