--- a/public/css/home.css
+++ b/public/css/home.css
@@ -12,7 +12,7 @@
 }
 
 .informationsContained{
-    max-width: 60%;
+    width: 60%;
     padding: 2em;
     text-align: center;
 }
@@ -65,6 +65,10 @@
 .backgroundPicText p {
     font-size: 2em;
     text-align: center;
+}
+
+.backgroundPicText a {
+    color: #fff;
 }
 
 
@@ -145,4 +149,34 @@
     color: #666;
     border-radius: 50%;
     font-weight: bold;
+}
+
+/************************************************* RESPONSIVE ************************************************************/
+@media only screen and (max-width : 440px) {
+
+    .backgroundPic{
+        height: auto;
+
+    }
+
+    .backgroundPicText{
+        padding: 1em;
+        font-size: 0.8em;
+        width: 100%;
+    }
+
+    .homeContent{
+        padding: 1em;
+    }
+
+    .informationsContained{
+        width: 100%;
+        padding: 0;
+    }
+
+    .homeContent h2 {
+        font-weight: 800;
+        font-size: 1.67em;
+    }
+
 }
