--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,14 @@ body{
     padding: 2em;
 }
 
-#siteHeader nav{
+#siteHeader article{
+    width: 30%;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+#menuNav{
     width: 70%;
     height: 5vh;
     background-image: url(../img/4d3uKwt812GoqIOoWCaUcKG.jpg);
@@ -61,7 +68,7 @@ body{
     color: #DBF0FA;
 }
 
-.navBar{
+#navBar{
     width: 100%;
     height: 100%;
     display: flex;
@@ -103,6 +110,10 @@ body{
     border-radius: 50%;
 }
 
+#menuButton{
+    display: none;
+}
+
 /****************************************** FOOTER *************************************************************/
 #siteFooter{
     width: 100%;
@@ -117,6 +128,7 @@ body{
 #siteFooter a{
     margin: 0;
     color: #fff;
+    font-size: 1.5em;
 }
 
 .socialMedia{
@@ -157,6 +169,7 @@ h1{
     width: 100%;
     text-align: center;
     margin: 0;
+    font-weight: 700;
 }
 
 
@@ -214,32 +227,38 @@ ol{
 
 /*********************************** SOCIAL MEDIAS COLORS ************************************************/
 .socialMediaFacebook i{
-    color: #4267B2;
+    /* color: #4267B2; */
+    color: #fff;
 }
 
 .socialMediaTwitter i{
-    color: #14171A;
+    /* color: #14171A; */
+    color: #fff;
 }
 
 .socialMediaYoutube i{
-    color: #FF0000;
+    /* color: #FF0000; */
+    color: #fff;
 }
 
 .socialMediaTwitch i{
-    color: #9146ff;
+    /* color: #9146ff; */
+    color: #fff;
 }
 
 .socialMediaLinkedIn i{
-    color: #0077B5;
+    /* color: #0077B5; */
+    color: #fff;
 }
 
 .socialMediaGithub i{
-    color: #333;
+    /* color: #333; */
+    color: #fff;
 }
 
 .socialMediaInstagram i{
     color: #fff;
-    background: radial-gradient(
+    /* background: radial-gradient(
             circle farthest-corner at 28% 100%,
             #fcdf8f 0%,
             #fbd377 10%,
@@ -252,12 +271,13 @@ ol{
     width: 60px;
     height: 60px;
     text-align: center;
-    padding-top: 3px;
+    padding-top: 3px; */
 }
 
 .socialMediaTiktok i{
-    color: #000;
-    filter: drop-shadow(-3px -2px #00f2ea) drop-shadow(3px 2px #ff0050);
+    /* color: #000;
+    filter: drop-shadow(-3px -2px #00f2ea) drop-shadow(3px 2px #ff0050); */
+    color: #fff;
 }
 
 /* form */
@@ -266,4 +286,81 @@ form{
     margin: 5em;
     padding: 5em;
     border-radius: 10px;
+}
+
+
+
+/************************************************* RESPONSIVE ************************************************************/
+@media only screen and (max-width : 440px) {
+
+    /************************************HEADER *******************************************/
+
+    #siteHeader{
+        flex-direction: column;
+        gap: 20px;
+        padding: 0;
+    }
+
+    #siteHeader article{
+        width: 100%;
+        justify-content: space-between;
+        padding: 1em;
+
+    }
+
+    .responsiveHide,
+    #siteHeader h2{
+        display: none;
+    }
+
+    #menuButton{
+        display: block;
+        width: 100px;
+        height: 40px;
+        border-radius: 10px;
+        background-image: url(../img/4d3uKwt812GoqIOoWCaUcKG.jpg);
+        color: #fff;
+    }
+
+    #menuNav{
+        width: 100%;
+        height: auto;
+    }
+
+    #navBar{
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        gap: 10px;
+        font-size: 2em;
+        
+    }
+
+    #siteHeader a:hover{
+        font-size: large;
+    }
+
+
+    /*************************************FOOTER ************************************************/
+    #siteFooter {
+        gap: 50px;
+        padding: 1em;
+        flex-direction: column;
+    }
+
+    #siteFooter p,
+    #siteFooter a{
+        font-size: 1.2em;
+        text-align: center;
+    }
+
+    .socialMedia {
+        width: 100%;
+    }
+
+    #tournament-list {
+        width: 100%;
+    }
+
+
 }
