Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   config/services.yaml
	new file:   migrations/Version20240108104845.php
	modified:   public/css/game.css
	modified:   public/css/home.css
	modified:   public/css/style.css
	modified:   public/css/team.css
	new file:   public/upload/logo/659bc6ff36690.jpg
	new file:   public/upload/logo/659bc73d189a8.jpg
	new file:   public/upload/logo/659bc75718db4.jpg
	new file:   public/upload/logo/659bc76ce0619.jpg
	new file:   public/upload/logo/659bc820e76fc.jpg
	new file:   public/upload/logo/659bc832bb765.jpg
	new file:   public/upload/pictures/defaultPicture.jpg
	modified:   src/Controller/PlayerController.php
	modified:   src/Controller/TeamController.php
	modified:   src/Entity/Player.php
	modified:   src/Form/PlayerType.php
	new file:   src/Service/FileUploaderPicture.php
	modified:   templates/base.html.twig
	modified:   templates/game/gameDetails.html.twig
	modified:   templates/home/index.html.twig
	modified:   templates/player/playerForm.html.twig
	modified:   templates/security/login.html.twig
	modified:   templates/team/index.html.twig
	modified:   templates/team/teamDetails.html.twig
	modified:   templates/topTeamsList.html.twig

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -72,7 +72,7 @@
 }
 
 
-/************Accordeon **********************************/
+/************Tournaments **********************************/
 #tournament-list {
     width: 700px;
     margin: 0 auto;
@@ -100,6 +100,15 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+    background-color: rgba(0,0,0,0.8);
+    height: 50px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5em;
+    border-radius: 10px;
+    color: #fff;
 }
 
 .tournamentGameCover {
@@ -123,7 +132,7 @@
     border-radius: 10px;
 }
 
-.active {
+/* .active {
     color: blue;
     font-weight: bold;
 }
@@ -133,9 +142,9 @@
 }
 
 .tournamentListHome {
-    /* display: none; */
+    /* display: none;
     list-style: none;
-}
+}*/
 
 .keywords{
     color: #fff;
@@ -149,6 +158,7 @@
     color: #666;
     border-radius: 50%;
     font-weight: bold;
+    font-size: 1.5em;
 }
 
 /************************************************* RESPONSIVE ************************************************************/
