--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -188,8 +188,6 @@
                                 {# Link to create a new editor #}
                                 <li><a href="{{ path('new_editor') }}" class="dropdown-item">Editeur</a></li>
 
-                                {# Link to create a new social media #}
-                                {# <li><a href="{{ path('app_home') }}" class="dropdown-item">Réseau Social</a></li> #}
                             </ul>
                         </div>
                     {% endif %}
@@ -228,7 +226,7 @@
             </figure>
 
             {# copyright.. #}
-            <p>&copy; 2023 - Esport Xpertise - <a href="#">Règlement</a> - <a href="#">Mentions légales</a> - <a href="#">CGU</a> - <a href="#">Politique de confidentialité</a></p>
+            <p>&copy; 2023 - Esport Xpertise - <a href="#">Règlement</a> - <a href="#">Mentions légales</a> - <a href="#">CGU</a> - <a href="#">Politique de confidentialité</a> - <a href = "mailto: admin@example.com">Nous Contacter</a></p>
 
             {# Links to my own social medias #}
             <div class="socialMedia">
