--- a/templates/player/playerForm.html.twig
+++ b/templates/player/playerForm.html.twig
@@ -33,6 +33,7 @@
             {{ form_row(form.gender) }}
             {{ form_row(form.biography) }}
             {{ form_row(form.birthDate) }}
+            {{ form_row(form.picture) }}
             {{ form_row(form.earning) }}
 
             
