--- a/templates/topTeamsList.html.twig
+++ b/templates/topTeamsList.html.twig
@@ -1,4 +1,4 @@
-<h4>Top 10 des équipes les plus suivies :</h4>
+<h4>Top 10 des équipes suivies :</h4>
 
 <ol>
     {# loop to take the teams in the data base limited at 10 needed and the sort allows me to sort the teams by  #}
