--- a/public/css/team.css
+++ b/public/css/team.css
@@ -1,20 +1,45 @@
 /************************************************ LIST OF TEAMS ****************************************************/
+#teamsContainer h1{
+    margin-bottom: 40px;
+}
+
 #teamsList{
     list-style: none;
     width: 100%;
     display: flex;
-    flex-direction: column;
     padding: 0;
     margin: 0;
-    gap: 10px;
+    gap: 30px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+#teamsList li{
+    width: 25%;
 }
 
 .teamLogo{
     margin: 0;
+    width: 100%;
+    position: relative;
 }
 
 .teamLogo img{
-    width: 50px;
+    width: 100%;
+    height: 475.75px;
+    border-radius: 10px;
+}
+
+.teamName{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    color: #fff;
+    text-decoration: none;
+    background-color: rgba(0,0,0,0.8);
+    border-radius: 10px;
+    font-size: 2em;
+    text-align: center;
 }
 
 
@@ -59,4 +84,85 @@
     display: flex;
     align-items: center;
     text-transform: uppercase;
+}
+
+.wrapper{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container{
+    height: 400px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: start;
+}
+
+.card {
+    width: 80px;
+    border-radius: .75em;
+    background-size: cover;
+    cursor: pointer;
+    overflow: hidden;
+    border-radius: 2rem;
+    margin: 0 10px;
+    display: flex;
+    align-items: flex-end;
+    transition: .6s cubic-bezier(.28, -0.03, 0, .99);
+    box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
+}
+
+.row{
+    color: #fff;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.icon{
+    background: #223;
+    color: #fff;
+    border-radius: 50%;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px;
+}
+
+.description{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+    height: 80px;
+    width: 520px;
+    opacity: 0;
+    transform: translateY(30px);
+    transition-delay: .3s;
+    transition: all .3s ease;
+}
+
+.description p{
+    color: #b0b0ba;
+    padding-top: 5px;
+}
+
+.description h4 {
+    text-transform: uppercase;
+}
+
+.rosterRadio{
+    display: none;
+}
+
+.rosterRadio:checked + label{
+    width: 600px;
+}
+
+.rosterRadio:checked + label .description{
+    opacity: 1 !important;
+    transform: translateY(0) !important;  
 }
