--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,17 +4,8 @@
 
 {% block body %}
 <form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-
-    {% for message in app.flashes('success') %}
-        <p>
-            {{message}}
-        </p>
-    {% endfor %}
-
-    <h1>Veuillez vous identifier</h1>
+    
+    <h1>Connecte-toi !</h1>
     <label for="inputUsername">Pseudo</label>
     <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
     <label for="inputPassword">Mot de Passe</label>
