--- a/templates/team/teamDetails.html.twig
+++ b/templates/team/teamDetails.html.twig
@@ -4,6 +4,8 @@
 
 {% block body %}
 
+    {% set slideNumber = 0 %}
+
     <div class="title">
 
         {# {{ dump(team) }} #}
@@ -48,65 +50,91 @@
         {% endif %}
         
     </div>
-
-    {# error messages  #}
-    {% for flash_error in app.flashes('error') %}
-
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-
-    {% endfor %}
-
-    {# success messages #}
-    {% for flash_success in app.flashes('success') %}
-
-        <div class="alert alert-success" role="alert">{{ flash_success }}</div>
-
-    {% endfor %}
             
     {# <p>Son siège sociale : <a href="{{ path('details_country', {'id': team.country.id}) }}">{{ team.country }}</a></p> #}
 
     {# creation date of the team #}
     <p>Date de création : {{ team.creationDate|date_fr('j F Y')}}</p>
 
+    {# <div class="wrapper">
+        <div class="container">
+            <input type="radio" name="slide" class="rosterRadio" id="c1">
+            <label for="c1" class="card">
+                <div class="row">
+                    <div class="icon">1</div>
+                    <div class="description">
+                        <h4>Player name</h4>
+                        <p>role</p>
+                    </div>
+                </div>
+            </label>
+            <input type="radio" name="slide" id="c2">
+            <label for="c2" class="card">
+                <div class="row">
+                    <div class="icon">2</div>
+                    <div class="description">
+                        <h4>Player name</h4>
+                        <p>role</p>
+                    </div>
+                </div>
+            </label>
+        </div>
+    </div> #}
+
     {# loop to search every roster  #}
     {% for roster in team.rosters %}
         <h6>Roster actuel pour {{ roster.game }} :</h6>
 
-        <ul>
+        <section class="wrapper">
 
-            {% for playerRoster in roster.playerRosters %}
+            <article class="container">
+    
+                {% for playerRoster in roster.playerRosters %}
 
-                {% if not playerRoster.playingEndDate %}
-                    
-                    <li>
+                    {% set slideNumber = slideNumber + 1 %}
+    
+                    {% if not playerRoster.playingEndDate %}
+                        
+                        <input type="radio" name="slide" class="rosterRadio" id="{{playerRoster.id}}">
 
-                        {{playerRoster.player}} est un joueur {{team}} pour le jeu {{ roster.game }}, il a rejoint l'équipe le {{playerRoster.playingStartDate|date_fr('d F Y')}}. {{ playerRoster.role ? "Son rôle est " ~ playerRoster.role }}
+                        <label for="{{playerRoster.id}}" class="card" style="background-image: url('asset(upload/picture/ ~ playerRoster.player.picture')}});">
 
-                    </li>
+                            <div class="row">
 
-                {% endif %}
+                                <div class="icon">{{slideNumber}}</div>
 
-            {% endfor %}
+                                <figure class="description">
 
-        </ul>
+                                    {# <img src="" alt="Photo de {{playerRoster.player}}"> #}
 
-        {% set nbAnciensJoueurs = 0 %}
+                                    <figcaption >
 
-        {% for playerRoster in roster.playerRosters %}
+                                        <h4>{{playerRoster.player}}</h4>
 
-            {% if playerRoster.playingEndDate %}
+                                        <p>role</p>
 
-                {% set nbAnciensJoueurs = nbAnciensJoueurs + 1 %}
-                
-            {% endif %}
+                                    </figcaption>
 
-        {% endfor %}
+                                </figure>
 
-        {% if nbAnciensJoueurs > 1 %}
+                            </div>
+
+                        </label>
+    
+                    {% endif %}
+    
+                {% endfor %}
+
+            </article>
+
+        </section>
+
+
+        {% if roster.playerRosters|length > 1 %}
 
             <h6>Anciens joueurs du roster {{ roster.game }} :</h6>
 
-        {% elseif nbAnciensJoueurs > 0 %}
+        {% elseif roster.playerRosters|length > 0 %}
             
             <h6>Ancien joueur du roster {{ roster.game }} :</h6>
 
