Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	new file:   migrations/Version20240109124328.php
	new file:   migrations/Version20240109124821.php
	new file:   migrations/Version20240109125009.php
	modified:   public/css/home.css
	modified:   public/css/tournament.css
	modified:   src/Controller/TournamentController.php
	modified:   templates/base.html.twig
	modified:   templates/home/index.html.twig
	modified:   templates/team/teamDetails.html.twig
	modified:   templates/tournament/index.html.twig
	modified:   templates/tournament/tournamentDetails.html.twig

--- a/public/css/tournament.css
+++ b/public/css/tournament.css
@@ -46,3 +46,18 @@
     text-align: center;
     width: 20%;
 }
+
+/*******************************************Tournament list *********************************************************/
+.tournamentsList {
+    list-style: none;
+}
+.tournamentsList a{
+    text-decoration: none;
+    color: #DBF0FA;
+    font-size: 2em;
+}
+
+.tournamentsList a:hover{
+
+    color: rgb(9, 9, 49);
+}
