--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -37,7 +37,7 @@
 
     </section>
 
-    <div class="homeContent">
+    <section class="homeContent">
 
         <aside class="topUsers responsiveHide">
 
@@ -87,7 +87,7 @@
 
                                     <figcaption class="tournamentName">
 
-                                    {{ tournament.0.name }}
+                                        {{ tournament.0.name }}
                                         
                                     </figcaption>
 
@@ -114,7 +114,7 @@
 
         </aside>
 
-    </div>
+    </section>
     
     
 
