--- a/templates/tournament/index.html.twig
+++ b/templates/tournament/index.html.twig
@@ -5,13 +5,17 @@
 {% block body %}
     <h1>Liste des tournois</h1>
 
-        <ul id="tournamentsList">
-            {{ dump(tournaments) }}
-            {% for tournament in tournaments %}
-                <li>
-                    <a href="{{ path('details_tournament', {'name': tournament.name, 'url': tournament.url}) }}">{{ tournament.name }}</a>
-                    {# {{ tournament.start_at|date_fr('l j F Y') }} #}
-                </li>
-            {% endfor %}
-        </ul>
+    <ul id="tournamentsList">
+        {# {{ dump(tournaments) }} #}
+        {% for tournament in tournaments %}
+
+            <li>
+
+                <a href="{{ path('details_tournament', {'name': tournament.name, 'url': tournament.url}) }}">{{ tournament.name }}</a>
+                {# {{ tournament.start_at|date_fr('l j F Y') }} #}
+                
+            </li>
+
+        {% endfor %}
+    </ul>
 {% endblock %}
