Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   templates/base.html.twig
	modified:   templates/game/gameDetails.html.twig
	modified:   templates/home/index.html.twig
	modified:   templates/team/index.html.twig
	modified:   templates/team/teamDetails.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -151,7 +151,7 @@
                     {# link to list of players #}
                     <li><a href="{{ path('app_player') }}">Joueurs</a></li>
                     
-                    {# link to list of countries #}
+                    {# link to list of tournaments #}
                     <li><a href="{{ path('app_tournament') }}">Tournois</a></li>
 
                     
